--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,6 @@
-
+[theme]
+primaryColor="#4CAF50"
+backgroundColor="#0E1117"
+secondaryBackgroundColor="#1f2937"
+textColor="#FFFFFF"
+font="sans serif"
